# testsss

ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/rc2026_field/lib/rc2026_field/: target_controller
ros2_ws/install/rc2026_field/share/rc2026_field/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/rc2026_field/share/rc2026_field/config/: controller.yaml
ros2_ws/install/rc2026_field/share/rc2026_field/launch/: rc2026_field_sim.launch.py
ros2_ws/install/rc2026_field/share/rc2026_field/meshes/: base_link.stl  big_arm_1.stl  head_link_1.stl  mid360_1.stl  rise_link_1.stl  small_arm_1.stl  wheel_1_1.stl  wheel_2_1.stl  wheel_3_1.stl  wheel_4_1.stl  x_move_1.stl  y_move_1.stl
ros2_ws/install/rc2026_field/share/rc2026_field/resource/: homework.world  rc2026_field
ros2_ws/install/rc2026_field/share/rc2026_field/rviz/: field.rviz
ros2_ws/install/rc2026_field/share/rc2026_field/urdf/: R2.gazebo  R2.trans  R2.xacro  materials.xacro  target.xacro
ros2_ws/install/robot_follow_target/lib/robot_follow_target/: camera_processor  follow_controller
ros2_ws/install/robot_follow_target/share/robot_follow_target/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/robot_follow_target/share/robot_follow_target/config/: follow_params.yaml
ros2_ws/log/: latest_build
ros2_ws/src/: readme
ros2_ws/src/rc2026_field_hw/urdf/: R2.gazebo
ros2_ws/src/robot_follow_target/: package.xml  setup.cfg  setup.py
ros2_ws/src/robot_follow_target/config/: follow_params.yaml
ros2_ws/src/robot_follow_target/launch/: gazebo_load_both.launch.py
ros2_ws/src/robot_follow_target/robot_follow_target/: camera_processor.py  follow_controller.py
ros2_ws/src/robot_follow_target/scripts/: run_follow.sh
tracker/rc2026_field_hw-main/rc2026_field_hw-main/urdf/: R2.xacro
tracker/robot_follow_target/: package.xml  setup.py
tracker/robot_follow_target/config/: follow_params.yaml
tracker/robot_follow_target/launch/: follow_target_launch.py  start_all.sh
tracker/robot_follow_target/src/robot_follow_target/: follow_controller.py  mono_distance_estimator.py  pose_calculator.py  target_tracker.py
(+3 files in other folders)
